feat: 改变Log类为自实现