@@ -4,6 +4,7 @@ import java.io.File;
 import java.io.UnsupportedEncodingException;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 
 import fun.lzwi.epubime.util.LoggerUtils;
 
@@ -12,9 +13,9 @@ public class Utils {
 
         URL resource = Utils.class.getClassLoader().getResource(path);
         if (resource != null) {
-            return new File(URLDecoder.decode(resource.getPath(), "utf-8"));
+            return new File(URLDecoder.decode(resource.getPath(), StandardCharsets.UTF_8));
         }
-        LoggerUtils.from(Utils.class).severe(String.format("path: %s异常", path));
+        LoggerUtils.from(Utils.class).error(String.format("路径%s异常", path));
         return null;
     }
 }
